Update license MIT

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Driver crate for ST LIS2DH12 accelerometer"
 repository = "https://github.com/andresovela/lis2dh-rs"
 documentation = "https://docs.rs/lis2dh"
 readme = "README.md"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 keywords = ["accelerometer", "driver", "i2c"]
 categories = ["embedded", "no-std", "drivers", "asynchronous"]
 exclude = [".github"]
