--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lis2dh"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2024"
 description = "Driver crate for the ST LIS2DH12 accelerometer"
 repository = "https://github.com/andresovela/lis2dh-rs"
@@ -12,8 +12,10 @@ categories = ["embedded", "no-std"]
 exclude = [".github"]
 
 [dependencies]
+defmt = { version = "1.0.0", optional = true }
 embedded-hal = "1.0.0"
 embedded-hal-async = { version = "1.0.0", optional = true }
 
 [features]
 async = ["dep:embedded-hal-async"]
+defmt = ["dep:defmt"]
