Use cargo build instead of cargo check in CI

--- a/.github/workflows/no-std.yml
+++ b/.github/workflows/no-std.yml
@@ -25,5 +25,6 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - run: rustup target add thumbv7m-none-eabi
-      - run: cargo check --locked --target thumbv7m-none-eabi
-      - run: cargo check --locked --target thumbv7m-none-eabi --features async
+      - run: cargo build --locked --target thumbv7m-none-eabi
+      - run: cargo build --locked --target thumbv7m-none-eabi --features async
+      - run: cargo build --locked --target thumbv7m-none-eabi --features defmt
